# prime_Shaik_Hafsah

./: LICENSE.rtf  README.md  Untitled.ipynb  pyproject.toml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
src/prime_hs3373/: __init__.py  prime_hs3373.py
tests/: test_is_prime.py  test_prime_hs3373.py
