[tool.poetry]
name = "prime_hs3373"
version = "0.1.0"
description = "MDS Homework 7 Python Package for Prime Numbers"
authors = ["hafsahshaik <83444215+hafsahshaik@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
